@@ -3,6 +3,8 @@
 - Fix dependency cycle in a full SIMP system that was introduced by
   the new autorequire of the parent directory of an INI file in the
   ini_setting type
+- Expanded the upper limit of the concat and stdlib Puppet module versions
+- Updated a URL in the README.md
 
 * Wed Feb 20 2019 Nick Miller <nick.miller@onyxpoint.com> - 7.8.1-0
 - Add management of $ssldir, $rundir, and /var/log/puppetserver
